# CarTrack

./: CMakeLists.txt  README.md
inc/: Coordinate.h  CoordinatesContainer.h  GpsCoordinate.h  GpsCoordinateBuilder.h  GpsCoordinates.h  GpsCoordinatesIO.h  Receiver.h  ReceiverStatus.h
inc/Gga/: CardinalDirection.h  DistanceUnit.h  GgaAltitude.h  GgaBuilder.h  GgaData.h  GgaHdop.h  GgaPosition.h  GgaQualityIndicator.h
src/: CoordinatesContainer.cpp  GpsCoordinate.cpp  GpsCoordinateBuilder.cpp  GpsCoordinates.cpp  GpsCoordinatesIO.cpp  Receiver.cpp  main.cpp
src/Gga/: GgaBuilder.cpp  GgaData.cpp
